--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AppsFolderDialog" Version="0.0.1.1" />
     <PackageReference Include="BlurWindow" Version="4.0.0" />
   </ItemGroup>
 
