update .net version to .NET 6

--- a/Master-Zhao/Master-Zhao.ConfigTests/Master-Zhao.ConfigTests.csproj
+++ b/Master-Zhao/Master-Zhao.ConfigTests/Master-Zhao.ConfigTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>.NETCoreApp,Version=v3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Master_Zhao.ConfigTests</RootNamespace>
 
     <IsPackable>false</IsPackable>
