--- a/Master-Zhao/Master-Zhao.Shell.Test/Master-Zhao.Shell.Test.csproj
+++ b/Master-Zhao/Master-Zhao.Shell.Test/Master-Zhao.Shell.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Master_Zhao.Shell.Test</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
