--- a/Master-Zhao/Master-Zhao.StartMenu.Test/Master-Zhao.StartMenu.Test.csproj
+++ b/Master-Zhao/Master-Zhao.StartMenu.Test/Master-Zhao.StartMenu.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Master_Zhao.StartMenu.Test</RootNamespace>
   </PropertyGroup>
 
