--- a/Master-Zhao/Master-Zhao.WebTests/Master-Zhao.WebTests.csproj
+++ b/Master-Zhao/Master-Zhao.WebTests/Master-Zhao.WebTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>.NETCoreApp,Version=v3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Master_Zhao.WebTests</RootNamespace>
 
     <IsPackable>false</IsPackable>
