--- a/Master-Zhao/Master-Zhao.Core.Tests/Master-Zhao.Core.Tests.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core.Tests/Master-Zhao.Core.Tests.vcxproj
@@ -77,7 +77,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\netcoreapp3.1</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\net6.0-windows\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
