--- a/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core/Master-Zhao.Core.vcxproj
@@ -83,7 +83,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <TargetName>MasterZhaoCore</TargetName>
-    <OutDir>..\x64\Debug\netcoreapp3.1\</OutDir>
+    <OutDir>..\x64\Debug\net6.0-windows\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
