get directory folder

--- a/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
+++ b/Master-Zhao/Master-Zhao.Shell/Master-Zhao.Shell.csproj
@@ -44,6 +44,7 @@
     <None Remove="Icon\StartMenu\startmenu_98.png" />
     <None Remove="Icon\StartMenu\startmenu_flat.png" />
     <None Remove="Icon\system.png" />
+    <None Remove="Icon\SystemMgmt\folder.png" />
     <None Remove="Icon\Utility\pause.png" />
     <None Remove="Icon\Utility\play.png" />
     <None Remove="Icon\visual studio.png" />
@@ -93,6 +94,7 @@
     <Resource Include="Icon\StartMenu\sleep.png" />
     <Resource Include="Icon\StartMenu\startmenu_98.png" />
     <Resource Include="Icon\StartMenu\startmenu_flat.png" />
+    <Resource Include="Icon\SystemMgmt\folder.png" />
     <Resource Include="Icon\Utility\pause.png" />
     <Resource Include="Icon\Utility\play.png" />
     <Resource Include="Icon\visual studio.png" />
