ready to apihook

--- a/Master-Zhao/Master-Zhao.Core.ShellHook/Master-Zhao.Core.ShellHook.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core.ShellHook/Master-Zhao.Core.ShellHook.vcxproj
@@ -129,6 +129,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>GdiPlus.lib;lib/libMinHook-x64-v141-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -148,11 +149,15 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>GdiPlus.lib;lib/libMinHook-x64-v141-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="apihook.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="include\MinHook.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ShellWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
