--- a/Master-Zhao/Master-Zhao.Core.ShellHook/Master-Zhao.Core.ShellHook.vcxproj
+++ b/Master-Zhao/Master-Zhao.Core.ShellHook/Master-Zhao.Core.ShellHook.vcxproj
@@ -128,6 +128,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
