update explorer background setting

--- a/WindowsX/WindowsX.Core.ShellHook/WindowsX.Core.ShellHook.vcxproj.filters
+++ b/WindowsX/WindowsX.Core.ShellHook/WindowsX.Core.ShellHook.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="framework.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="logger.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="BitmapImage.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="logger.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
