--- a/WindowsX/WindowsX.Core/WindowsX.Core.vcxproj
+++ b/WindowsX/WindowsX.Core/WindowsX.Core.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="IconTool.h" />
     <ClInclude Include="InputTool.h" />
+    <ClInclude Include="Mailslot.h" />
     <ClInclude Include="PowerTool.h" />
     <ClInclude Include="RegTool.h" />
     <ClInclude Include="ResTool.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="IconTool.cpp" />
     <ClCompile Include="InputTool.cpp" />
+    <ClCompile Include="Mailslot.cpp" />
     <ClCompile Include="PowerTool.cpp" />
     <ClCompile Include="RegTool.cpp" />
     <ClCompile Include="ResTool.cpp" />
