--- a/WindowsX/WindowsX.Core.ShellHook/WindowsX.Core.ShellHook.vcxproj
+++ b/WindowsX/WindowsX.Core.ShellHook/WindowsX.Core.ShellHook.vcxproj
@@ -162,12 +162,14 @@
     <ClInclude Include="BitmapImage.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="include\MinHook.h" />
+    <ClInclude Include="logger.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="ShellWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitmapImage.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="logger.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
